=========================
Change log for tl.eggdeps
=========================

0.5 (unreleased)
================


0.4 (2009-07-12)
================

Features:
  - Handle more detailed information about what extras of other distributions
    are being depended upon by each distribution in the graph.

Bug fixes:
  - Work with distribution names that occur with inconsistent capitalisation.

Organisation:
  - Several code clean-ups, added documentation (thanks to Marius Gedminas).

  - Use sphinx to build documentation.


0.3.2 (2009-03-25)
==================

Features:
  - Added an API for including a comment in a generated dot file, use it to
    record the arguments eggdeps was called with. Thanks to Christian
    Zagrodnick for the suggestion.

Bug fixes:
  - Omission of a subtree in the plaintext output would cause all following
    siblings of the mount point to be skipped.

  - The plaintext graph built from the whole working set would be incomplete
    if any graph roots were cyclic. One distribution from each such cycle will
    be considered a root now. This also affects colors in dot graphs.


0.3.1 (2008-05-12)
==================

Features:
  - Added an option --version-specs (-s) for printing complex version
    specifications in a requirements list. They take into account the
    intersection of all version requirements for a particular distribution,
    but disregard extras completely for the time being.


0.3 (2008-03-29)
================

Features:
  - added an option --once (-1) for printing each distribution only once in
    plain text output

  - added an option --terse (-t) for suppressing hints at subtrees that are
    not printed in order to avoid duplication in plain text output

  - added an option --requirements (-r) for printing a list of requirement
    specifications from the dependency graph

Organisation:
  - added tests for output modules


0.2.2 (2008-03-10)
==================

Bug fixes: