@@ -5,7 +5,7 @@ parts = eggdeps test sphinx sphinx-autogen
 [eggdeps]
 recipe = zc.recipe.egg
 interpreter = py
-eggs = tl.eggdeps
+eggs = tt.eggdeps
 
 # The following example arguments turn on dot file output and printing of
 # version numbers, turn off extras, and make the setuptools egg be ignored:
@@ -15,14 +15,14 @@ eggs = tl.eggdeps
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = tl.eggdeps [test]
+eggs = tt.eggdeps [test]
 defaults = ["-v", "-c", "-s", "tl"]
 
 [sphinx]
 recipe = zc.recipe.egg
 eggs = sphinx
        pkginfo
-       tl.eggdeps
+       tt.eggdeps
 scripts = sphinx-build
 arguments = argv=sys.argv+("-E -c doc/ -d build/sphinx/doctrees"
                            " . build/sphinx/html/").split()
@@ -30,6 +30,6 @@ arguments = argv=sys.argv+("-E -c doc/ -d build/sphinx/doctrees"
 [sphinx-autogen]
 recipe = zc.recipe.egg
 eggs = sphinx
-       tl.eggdeps
+       tt.eggdeps
 scripts = sphinx-autogen
 arguments = argv=sys.argv+"-o doc/ -s .txt doc/modules.txt".split()
