@@ -5,11 +5,11 @@ Modules
 .. autosummary::
     :toctree: ./
 
-    tl.eggdeps.graph
-    tl.eggdeps.plaintext
-    tl.eggdeps.dot
-    tl.eggdeps.requirements
-    tl.eggdeps.cli
+    tt.eggdeps.graph
+    tt.eggdeps.plaintext
+    tt.eggdeps.dot
+    tt.eggdeps.requirements
+    tt.eggdeps.cli
 
 
 .. Local Variables:
