@@ -9,7 +9,7 @@ In version 0.3.1, a bug involving omissions in the plaintext output was found:
 If a subtree was omitted, siblings following its mount point were skipped.
 This is how it should work:
 
->>> from tl.eggdeps.graph import Graph
+>>> from tt.eggdeps.graph import Graph
 >>> anton = make_dist("anton-1.egg", depends="""berta
 ...                                             charlie""")
 >>> berta = make_dist("berta-2.egg", depends="""charlie
@@ -21,7 +21,7 @@ This is how it should work:
 >>> graph = Graph(working_set=ws)
 >>> graph.from_specifications("anton")
 
->>> from tl.eggdeps.plaintext import print_graph
+>>> from tt.eggdeps.plaintext import print_graph
 >>> print_graph(graph, Options())
 anton
     berta
